# cookiebaker

./: README.md  pyproject.toml
src/cookiebaker/: __init__.py
src/cookiebaker/default_cookiecutter/: cookiecutter.json
src/cookiebaker/default_cookiecutter/hooks/: post_gen_project.py  pre_gen_project.py
src/cookiebaker/default_cookiecutter/templates/: MIT  MIT License  UN
src/cookiebaker/default_cookiecutter/{{ cookiecutter.__project_slug }}/: README.md  pyproject.toml
src/cookiebaker/default_cookiecutter/{{ cookiecutter.__pypi_slug }}/: LICENSE.txt  README.md  pyproject.toml
src/cookiebaker/default_cookiecutter/{{ cookiecutter.__pypi_slug }}/.local/: run-acceptance-test  {{ cookiecutter.__gitignore }}
