[project]
name = "cookiebaker"
version = "0.2.0"
description = ""
readme = "README.md"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python :: 3"
]
dependencies = [ "cookiecutter" ]
license = {file = "LICENSE.txt"}

[project.scripts]
new-project = "cookiebaker:cli"


[[project.authors]]
name = "Karl Knechtel"
email = "zahlman@proton.me"
